--- a/snippets/collection-featured-image.liquid
+++ b/snippets/collection-featured-image.liquid
@@ -14,7 +14,7 @@
 -%}
 {%- capture featured_img_tag -%}
   <img
-    srcset="{%- if collection.featured_image.width >= 550 -%}{{ collection.featured_image | image_url: width: 550 }} 550w,{%- endif -%}
+    data-srcset="{%- if collection.featured_image.width >= 550 -%}{{ collection.featured_image | image_url: width: 550 }} 550w,{%- endif -%}
             {%- if collection.featured_image.width >= 1100 -%}{{ collection.featured_image | image_url: width: 1100 }} 1100w,{%- endif -%}
             {%- if collection.featured_image.width >= 1445 -%}{{ collection.featured_image | image_url: width: 1445 }} 1445w,{%- endif -%}
             {%- if collection.featured_image.width >= 1680 -%}{{ collection.featured_image | image_url: width: 1680 }} 1680w,{%- endif -%}
@@ -24,7 +24,7 @@
             {%- if collection.featured_image.width >= 4096 -%}{{ collection.featured_image | image_url: width: 4096 }} 4096w,{%- endif -%}
             {{ collection.featured_image | image_url }} {{ collection.featured_image.width }}w"
     sizes="(min-width: 750px) calc(100vw - 22rem), 1445px"
-    src="{{- collection.featured_image | image_url: width: 1445 -}}"
+    src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" data-class="LazyLoad" data-src="{{- collection.featured_image | image_url: width: 1445 -}}"
     alt="{{- image_alt -}}"
     loading="{{ loading }}"
     width="1445"
